[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUITheme_smaller.tres" type="Theme" id=1]
[ext_resource path="res://OptionsMenu.gd" type="Script" id=3]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.862745 )

[node name="hBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
margin_bottom = 124.0
theme = ExtResource( 1 )
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/hBoxContainer"]
margin_left = 18.0
margin_right = 168.0
margin_bottom = 124.0
theme = ExtResource( 1 )

[node name="vBoxContainer" type="VBoxContainer" parent="ColorRect/hBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 60.0

[node name="SFXButton" type="CheckButton" parent="ColorRect/hBoxContainer/VBoxContainer/vBoxContainer"]
margin_right = 150.0
margin_bottom = 40.0
pressed = true
text = "Sound Effects"

[node name="SFXSlider" type="HSlider" parent="ColorRect/hBoxContainer/VBoxContainer/vBoxContainer"]
margin_top = 44.0
margin_right = 150.0
margin_bottom = 60.0
min_value = -50.0
max_value = 0.0
tick_count = 10
ticks_on_borders = true

[node name="vBoxContainer2" type="VBoxContainer" parent="ColorRect/hBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 150.0
margin_bottom = 124.0
alignment = 2

[node name="MusicButton" type="CheckButton" parent="ColorRect/hBoxContainer/VBoxContainer/vBoxContainer2"]
margin_right = 150.0
margin_bottom = 40.0
pressed = true
text = "Music"

[node name="MusicSlider" type="HSlider" parent="ColorRect/hBoxContainer/VBoxContainer/vBoxContainer2"]
margin_top = 44.0
margin_right = 150.0
margin_bottom = 60.0
min_value = -50.0
max_value = 0.0
tick_count = 10
ticks_on_borders = true

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/hBoxContainer"]
margin_left = 172.0
margin_right = 302.0
margin_bottom = 124.0
theme = ExtResource( 1 )

[node name="FullscreenButton" type="CheckButton" parent="ColorRect/hBoxContainer/VBoxContainer2"]
margin_right = 130.0
margin_bottom = 40.0
text = "Fullscreen"

[node name="ExitButton" type="Button" parent="ColorRect/hBoxContainer/VBoxContainer2"]
margin_top = 44.0
margin_right = 130.0
margin_bottom = 63.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Exit"
align = 2

[connection signal="toggled" from="ColorRect/hBoxContainer/VBoxContainer/vBoxContainer/SFXButton" to="." method="_on_SFXButton_toggled"]
[connection signal="value_changed" from="ColorRect/hBoxContainer/VBoxContainer/vBoxContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="ColorRect/hBoxContainer/VBoxContainer/vBoxContainer2/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="value_changed" from="ColorRect/hBoxContainer/VBoxContainer/vBoxContainer2/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="ColorRect/hBoxContainer/VBoxContainer2/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="pressed" from="ColorRect/hBoxContainer/VBoxContainer2/ExitButton" to="." method="_on_ExitButton_pressed"]
